finish workshop-3, add alt text to all workshops

--- a/2-workshop-I-email-subscribe/index.html
+++ b/2-workshop-I-email-subscribe/index.html
@@ -9,7 +9,7 @@
   <body class="bg-[#3f3f46] h-screen flex justify-center items-center">
     <!-- Card -->
     <div class="bg-[#27272a] w-1/2 aspect-[7/3] rounded-xl p-2.5 flex">
-      <img src="images/image.jpg" alt="" class="rounded-l-xl" />
+      <img src="images/image.jpg" alt="A bowl of edamame" class="rounded-l-xl" />
       <div class="text-neutral-50 self-center p-7">
         <h2 class="text-lg">Get diet and fitness tips in your inbox</h2>
         <p class="text-sm py-4">
