--- a/3-workshop-II-image-gallery/index.html
+++ b/3-workshop-II-image-gallery/index.html
@@ -28,15 +28,15 @@
     </div>  
     <!-- Gallery Row 1 -->
     <div id="row1" class="flex flex-nowrap gap-3">
-      <img src="images/image1.jpg" alt="" class="w-2/6"/>
-      <img src="images/image2.jpg" alt="" class="w-2/6"/>
-      <img src="images/image3.jpg" alt="" class="w-2/6"/>
+      <img src="images/image1.jpg" alt="A person wearing make-up" class="w-2/6"/>
+      <img src="images/image2.jpg" alt="An open window in a dark stairwell" class="w-2/6"/>
+      <img src="images/image3.jpg" alt="An architectural shot showing horizontal and diagonal lines" class="w-2/6"/>
     </div>
     <!-- Gallery Row 2 -->
     <div id="row2" class="flex flex-nowrap gap-3 pt-3">
-      <img src="images/image4.jpg" alt="" class="w-2/6"/>
-      <img src="images/image5.jpg" alt="" class="w-2/6"/>
-      <img src="images/image6.jpg" alt="" class="w-2/6"/>
+      <img src="images/image4.jpg" alt="An abstract painting" class="w-2/6"/>
+      <img src="images/image5.jpg" alt="A front view of a city block" class="w-2/6"/>
+      <img src="images/image6.jpg" alt="Woodend doors in a tall grey brick wall" class="w-2/6"/>
     </div>
   </body>
 </html>
