--- a/4-workshop-III-product-modal/index.html
+++ b/4-workshop-III-product-modal/index.html
@@ -3,7 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Workshop 3</title>
   </head>
-  <body></body>
+  <body class="bg-slate-100 h-screen flex justify-center items-center">
+    <div class="flex bg-white w-[30rem] p-8">
+      <div class="w-1/2 pr-6 pt-4">
+        <img src="images/headphone.png" alt="A pink cat-ear headset"/>
+      </div>
+      <div class="">
+        <span class="bg-black text-white rounded-full px-1 py-[0.1rem] text-[0.5rem]">Free shipping</span>
+        <h1 class="text-base pb-5">Razer Kraken Kitty Edt Gaming Headset Quartz</h1>
+        <div class="text-xs line-through">$700</div>
+        <div class="text-2xl font-bold">$599</div>
+        <div class="text-[0.5rem] text-gray-400 py-3">The offer is valid until April 3 or as long as stock lasts!</div>
+        <div class="w-full">
+          <button type="button" class="bg-blue-500 text-white w-full text-xs py-2 rounded z-20 relative">Add to cart</button>
+          <div class="bg-blue-600 w-full text-xs py-2 rounded text-blue-600 w-auto relative -top-3 z-10 -mb-3"></div>
+        </div>  
+        <div class="text-[0.5rem] py-3">
+          <span class="inline-block bg-green-300 rounded-full w-[0.5rem] h-[0.5rem] mr-1"></span>
+          50+ pcs. in stock.</div>
+        <div class="flex text-xs gap-2">
+          <div class="flex items-center border-2 rounded p-2">
+            <img src="images/weight.png" alt="A scale" class="h-6" />
+            <div>Add to cart</div>
+          </div>
+          <div class="flex items-center border-2 rounded p-2">
+            <img src="images/heart.png" alt="A scale" class="h-6" />
+            <div>Add to wishlist</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
